feat(clases): ruta GET /clases/estados implementada #16
